--- a/scss/structure/_about.scss
+++ b/scss/structure/_about.scss
@@ -32,6 +32,7 @@ main {
         padding-inline: 1.5rem;
         box-shadow: 0 -12px 8px -8px rgb(0 0 0 / 25%);
         border-top: .25rem solid var(--brand);
+        width: calc(100vw - 1.5rem);
     }
 
     figure {
